--- a/machines/microvax3900/microvax3900.ini
+++ b/machines/microvax3900/microvax3900.ini
@@ -1,5 +1,13 @@
 ; Load CPU microcode
-load -r /usr/src/simh/VAX/ka655.bin
+;load -r /usr/src/simh/VAX/ka610.bin
+;load -r /usr/src/simh/VAX/ka620.bin
+;load -r /usr/src/simh/VAX/ka620_orig.bin
+;load -r /usr/src/simh/VAX/ka630.bin
+;load -r /usr/src/simh/VAX/ka630_orig.bin
+;load -r /usr/src/simh/VAX/ka655_orig.bin
+load -r /usr/src/simh/VAX/ka655x.bin
+;load -r /usr/src/simh/VAX/ka750_new.bin
+;load -r /usr/src/simh/VAX/ka750_old.bin
 ;
 ; Attach non-volatile RAM to a file
 attach nvr nvram.bin
@@ -18,16 +26,16 @@ attach rq0 d0.dsk
 attach rq1 d1.dsk
 attach rq2 d2.dsk
 ;
-; Attach the CD-ROM to its file (read-only) 
+; Attach the CD-ROM to its file (read-only)
 ;attach -r rq3 /usr/local/vax/data/cd.iso
 attach -r rq3 OpenVMS_VAX_7.3.img
 ;
 ; Disable unused devices. It's also possible to disable individual devices,
-; using a construction like "set rq2 disable" if desired. 
+; using a construction like "set rq2 disable" if desired.
 ;
 set rl disable
 set ts disable
-; 
+;
 ; Attach Ethernet to a network interface
 set xq mac=08-00-2B-AA-BB-CC
 attach xq eth0
