--- a/machines/vax/vax.ini
+++ b/machines/vax/vax.ini
@@ -5,7 +5,7 @@
 ;load -r /usr/src/simh/VAX/ka630.bin
 ;load -r /usr/src/simh/VAX/ka630_orig.bin
 ;load -r /usr/src/simh/VAX/ka655_orig.bin
-load -r /usr/src/simh/VAX/ka655x.bin
+; load -r /usr/src/simh/VAX/ka655x.bin
 ;load -r /usr/src/simh/VAX/ka750_new.bin
 ;load -r /usr/src/simh/VAX/ka750_old.bin
 ;
