--- a/machines/pdp11/pdp11.ini
+++ b/machines/pdp11/pdp11.ini
@@ -1,4 +1,4 @@
 set cpu 1m
-att rl0 rsts_full_rl.dsk
-att rl1 rsts_swap_rl.dsk
+att rl0 Disks/rsts_full_rl.dsk
+att rl1 Disks/rsts_swap_rl.dsk
 b rl0
