--- a/machines/vax8600/install_vax8600.ini
+++ b/machines/vax8600/install_vax8600.ini
@@ -41,4 +41,22 @@ set xq mac=08-00-2B-AA-BB-CC
 attach xq eth0
 ;
 ; Now start the emulator
-boot cpu
+
+expect "PLEASE ENTER DATE AND TIME (DD-MMM-YYYY  HH:MM)"  send "09-jan-2018 12:00\r"; c
+
+expect "Enter \"YES\" when all needed devices are available:"  send "YES\rbackup dua3:vms073.b/save_set dua0:\r"; c
+expect "If you do want to perform another standalone BACKUP operation," boot rq0;
+
+expect "Enter the volume label for this system disk" send "\r";c
+expect "Enter name of drive holding the OpenVMS distribution media:" send "DUA2\r";c
+expect "Is the OpenVMS media ready to be mounted" send "Y\r"; c
+expect "Do you want to install the OpenVMS library files" send "Y\r"; c
+expect "Do you want to install the OpenVMS optional files" send "Y\r"; c
+expect "Do you want to install the MSGHLP database" send "Y\r"; c
+expect "Where do you want to install the MSGHLP database" send "\r"; c
+expect "Do you want to install the optional OpenVMS Management Station files" send "N\r"; c
+expect "Do you want the DECwindows base support" send "N\r"; c
+expect "Do you want to install DECnet-Plus" send "Y\r"; c
+expect "Is this correct" send "Y\r"; c
+
+boot rq3
