--- a/machines/vax8600/install_vax8600.ini
+++ b/machines/vax8600/install_vax8600.ini
@@ -42,11 +42,12 @@ attach xq eth0
 ;
 ; Now start the emulator
 
-expect "PLEASE ENTER DATE AND TIME (DD-MMM-YYYY  HH:MM)"  send "09-jan-2018 12:00\r"; c
+expect "PLEASE ENTER DATE AND TIME (DD-MMM-YYYY  HH:MM)"  send "01-OCT-1984 00:00\r"; c
 
 expect "Enter \"YES\" when all needed devices are available:"  send "YES\rbackup dua3:vms073.b/save_set dua0:\r"; c
 expect "If you do want to perform another standalone BACKUP operation," boot rq0;
 
+expect "Please enter the date and time" send "01-OCT-1984 01:00\r"; c
 expect "Enter the volume label for this system disk" send "\r";c
 expect "Enter name of drive holding the OpenVMS distribution media:" send "DUA2\r";c
 expect "Is the OpenVMS media ready to be mounted" send "Y\r"; c
