--- a/machines/vax8600/install_vax8600.ini
+++ b/machines/vax8600/install_vax8600.ini
@@ -15,6 +15,9 @@ attach nvr nvram.bin
 ; This virtual machine has 64M memory
 set cpu 64m
 ;
+;Attach a console
+set console telnet=2223
+;
 ; Define disk drive types. RA92 is largest-supported VAX drive.
 set rq0 ra92
 set rq1 ra92
