--- a/Dockerfile.latest
+++ b/Dockerfile.latest
@@ -3,7 +3,7 @@ FROM alpine:edge
 ENV BUILDPKGS "git gcc libc-dev make vde2-dev libpcap-dev linux-headers readline-dev"
 ENV RUNPKGS "net-tools vde2 vde2-libs libpcap nano readline bash curl wget unzip"
 
-#COPY /machines/ /machines/
+COPY /machines/ /machines/
 
 RUN apk --update --no-cache add $RUNPKGS && rm -rf /var/cache/apk/* && \
     apk --no-cache add --virtual build-dependencies $BUILDPKGS && \
