--- a/machines/vax8600/install_vax8600.ini
+++ b/machines/vax8600/install_vax8600.ini
@@ -16,7 +16,7 @@ attach nvr nvram.bin
 set cpu 64m
 ;
 ;Attach a console
-set console telnet=2223
+;set console telnet=2223
 ;
 ; Define disk drive types. RA92 is largest-supported VAX drive.
 set rq0 ra92
