--- a/machines/vax8600/install_vax8600.ini
+++ b/machines/vax8600/install_vax8600.ini
@@ -63,6 +63,6 @@ expect "Do you want the DECwindows base support" send "N\r"; c
 expect "Do you want to install DECnet-Plus" send "Y\r"; c
 expect "Is this correct" send "Y\r"; c
 
-expect ""Enter password for SYSTEM:" send "SYSTEMpassword\r";c
+expect "Enter password for SYSTEM:" send "SYSTEMpassword\r";c
 
 boot rq3
