--- a/machines/vax8600/install_vax8600.ini
+++ b/machines/vax8600/install_vax8600.ini
@@ -63,6 +63,25 @@ expect "Do you want the DECwindows base support" send "N\r"; c
 expect "Do you want to install DECnet-Plus" send "Y\r"; c
 expect "Is this correct" send "Y\r"; c
 
-expect "Enter password for SYSTEM:" send "SYSTEMpassword\r";c
+expect "Enter password for SYSTEM:" send "SYSTEMpassword\rSYSTEMpassword\r";c
+expect "Enter password for SYSTEST:" send "SYSTESTpassword\rSYSTESTpassword\r";c
+expect "Enter password for FIELD:" send "FIELDpassword\rFIELDpassword\r";c
+
+expect "Please enter the SCSNODE name:" send "VAX1\r";c
+expect "Please enter the SCSSYSTEMID:" send "1025\r";c
+
+expect "Do you want to register any Product Authorization Keys" send "N\r"; c
+expect "Select the number above that best describes your location" send "12\r\r"; c
+
+expect "Enter the Time Differential Factor send "\r\r"; c
+
+expect "Enter name of drive holding the DECnet-Plus kit" send "DUA3\ry\r"; c
+
+expect "Do you want the defaults for all options" send "\r"; c
+expect "Do you want to review the options" send "\r"; c
+
+expect "PLEASE ENTER DATE AND TIME" send "01-OCT-1984 00:00\r"; c
+
+
 
 boot rq3
