--- a/machines/microvax3900/install_microvax3900.ini
+++ b/machines/microvax3900/install_microvax3900.ini
@@ -73,7 +73,7 @@ expect "Please enter the SCSSYSTEMID:" send "1025\r";c
 expect "Do you want to register any Product Authorization Keys" send "N\r"; c
 expect "Select the number above that best describes your location" send "12\r\r"; c
 
-expect "Enter the Time Differential Factor send "\r\r"; c
+expect "Enter the Time Differential Factor" send "\r\r"; c
 
 expect "Enter name of drive holding the DECnet-Plus kit" send "DUA3\ry\r"; c
 
@@ -84,4 +84,4 @@ expect "PLEASE ENTER DATE AND TIME" send "01-OCT-1984 00:00\r"; c
 
 
 
-boot rq3
+boot cpu
