--- a/machines/microvax3900/install_microvax3900.ini
+++ b/machines/microvax3900/install_microvax3900.ini
@@ -45,6 +45,9 @@ attach xq eth0
 ;
 ; Now start the emulator
 
+
+expect "Tests completed.\r>>>" send "boot dua3"; c
+
 expect "PLEASE ENTER DATE AND TIME (DD-MMM-YYYY  HH:MM)"  send "01-OCT-1984 00:00\r"; c
 
 expect "Enter \"YES\" when all needed devices are available:"  send "YES\rbackup dua3:vms073.b/save_set dua0:\r"; c
