--- a/machines/microvax3900/install_microvax3900.ini
+++ b/machines/microvax3900/install_microvax3900.ini
@@ -46,7 +46,7 @@ attach xq eth0
 ; Now start the emulator
 
 
-expect "Tests completed.\r>>>" send "boot dua3"; c
+expect ">>>" send "boot dua3\r"; c
 
 expect "PLEASE ENTER DATE AND TIME (DD-MMM-YYYY  HH:MM)"  send "01-OCT-1984 00:00\r"; c
 
