--- a/machines/microvax3900/openvax73/install_microvax3900.ini
+++ b/machines/microvax3900/openvax73/install_microvax3900.ini
@@ -51,7 +51,8 @@ expect ">>>" send "boot dua3\r"; c
 expect "PLEASE ENTER DATE AND TIME (DD-MMM-YYYY  HH:MM)"  send "01-OCT-1984 00:00\r"; c
 
 expect "Enter \"YES\" when all needed devices are available:"  send "YES\rbackup dua3:vms073.b/save_set dua0:\r"; c
-expect "If you do want to perform another standalone BACKUP operation," boot rq0;
+expect "If you do want to perform another standalone BACKUP operation," boot cpu;
+expect ">>>" send "set boot dua0\rboot\r"; c
 
 expect "Please enter the date and time" send "01-OCT-1984 01:00\r"; c
 expect "Enter the volume label for this system disk" send "\r";c
