--- a/machines/microvax3900/openvax73/install_microvax3900.ini
+++ b/machines/microvax3900/openvax73/install_microvax3900.ini
@@ -86,6 +86,8 @@ expect "Do you want to review the options" send "\r"; c
 
 expect "PLEASE ENTER DATE AND TIME" send "01-OCT-1984 00:00\r"; c
 
+expect "OPCOM-W-NOOPCOM, the request was not sent, the OPCOM process is not running" quit
+
 
 
 boot cpu
