--- a/machines/microvax3900/openvax73/install_microvax3900.ini
+++ b/machines/microvax3900/openvax73/install_microvax3900.ini
@@ -12,8 +12,17 @@
 ; Attach non-volatile RAM to a file
 attach nvr nvram.bin
 ;
+
+; offload disk, tape, and network IO to threads
+set async
+; Configure VAX with 2 virtual CPUs
+cpu multi 2
 ; This virtual machine has 64M memory
-set cpu 64m
+; set cpu 64m
+SET CPU 512M
+; Set CPU idle to be VMS - This works, but generates a diagnostic
+set cpu idle=VMS
+
 ;
 ;Attach a console
 ;set console telnet=2223
@@ -38,6 +47,19 @@ attach -r rq3 OpenVMS_VAX_7.3.img
 ;
 set rl disable
 set ts disable
+
+
+set rl disable
+set ts disable
+set cr disable
+set dz disable
+set lpt disable
+set ry disable
+set ts disable
+set tq disable
+
+
+
 ;
 ; Attach Ethernet to a network interface
 set xq mac=08-00-2B-AA-BB-CC
