--- a/machines/microvax3900/openvax73/install2_microvax3900.ini
+++ b/machines/microvax3900/openvax73/install2_microvax3900.ini
@@ -60,12 +60,19 @@ attach xq eth0
 ; Now start the emulator
 
 
-expect ">>>" send "boot dua3\r"; c
+expect ">>>" send "boot dua0\r"; c
 
 expect "PLEASE ENTER DATE AND TIME (DD-MMM-YYYY  HH:MM)"  send "01-OCT-1984 00:00\r"; c
 
 
+expect "Charged CPU time" send "\r";c
+expect "Username:" send "SYSTEM\r";c
 
+expect "Welcome to OpenVMS" send "SYSTEM\r";c
 
+expect "Password:" send "SYSTEMpassword\rset proc/priv=all\rinitialize dua1: DATA1\rinitialize dua2: DATA2\rmount/system dua1 data1\rmount/system dua2 data2\rr sys$system:sysgen\r";c
+expect "SYSGEN" send "SET INTSTKPAGES 20\rWRITE CURRENT\rEXIT\rmount/over=id dua3:\r\r\r\r\r\r\r\r";c
+expect "VAXVMS073 mounted" send "@sys$system:shutdown\r";c
+expect "SYSTEM SHUTDOWN COMPLETE" exit
 
 boot cpu
