--- a/machines/microvax3900/openvax73/install2_microvax3900.ini
+++ b/machines/microvax3900/openvax73/install2_microvax3900.ini
@@ -70,7 +70,7 @@ expect "VAXVMS073 mounted" send "LICENSE REGISTER UCX /ISSUER=VLF /AUTHORIZATION
 expect "DEC UCX was successfully loaded with" send "LICENSE REGISTER DVNETEND /ISSUER=VLF /AUTHORIZATION=VLF-HOBBYIST-0000-000547 /PRODUCER=DEC /UNITS=0 /ACTIVITY=CONSTANT=100 /OPTIONS=(MOD_UNITS) /CHECKSUM=2-ACHC-HAIC-DCCG-HEGO\rLICENSE LOAD DVNETEND\r";c
 expect "DEC DVNETEND was successfully loaded with" send "LICENSE REGISTER DVNETRTG /ISSUER=VLF /AUTHORIZATION=VLF-HOBBYIST-0000-000549 /PRODUCER=DEC /UNITS=0 /ACTIVITY=CONSTANT=100 /OPTIONS=(MOD_UNITS) /CHECKSUM=2-MHJK-BDAJ-FGEJ-PIMN\rLICENSE LOAD DVNETRTG\r";c
 expect "DEC DVNETRTG was successfully loaded with" send "set def dua3:[tcpip_vax051.kit]\rproduct install *\r\r\r\r"; c
-expect "Check the release notes for current status of the product." send "set def sys$update\r@autogen getdata shutdown nofeedback";c
+expect "Check the release notes for current status of the product." send "set def sys$update\r@autogen getdata shutdown nofeedback\r";c
 expect "SYSTEM SHUTDOWN COMPLETE" exit
 
 boot cpu
