--- a/machines/microvax3900/openvax73/run_microvax3900.ini
+++ b/machines/microvax3900/openvax73/run_microvax3900.ini
@@ -63,4 +63,8 @@ attach xq nat
 ;
 ; Now start the emulator
 
+send delay=10000
+expect ">>>" send "boot dua0\r"; c
+;expect "PLEASE ENTER DATE AND TIME (DD-MMM-YYYY  HH:MM)"  send "01-OCT-1984 00:00\r"; c
+
 boot cpu
