--- a/machines/microvax3900/openvax73/install2_microvax3900.ini
+++ b/machines/microvax3900/openvax73/install2_microvax3900.ini
@@ -64,7 +64,11 @@ expect ">>>" send "boot dua0\r"; c
 expect "PLEASE ENTER DATE AND TIME (DD-MMM-YYYY  HH:MM)"  send "01-OCT-1984 00:00\r"; c
 expect "Accounting information:" send "\r"; c
 expect "Welcome to OpenVMS (TM) VAX Operating System, Version V7.3" send AFTER=1000000 "\rSYSTEM\r";c
-expect "Password:" send "SYSTEMpassword\rset proc/priv=all\rinitialize dua1: DATA1\rinitialize dua2: DATA2\rmount/system dua1 data1\rmount/system dua2 data2\rr sys$system:sysgen\r";c
+expect "Password:" send "SYSTEMpassword\r";c
+expect "$ " send "set proc/priv=all\r";c
+expect "$ " send "initialize dua1: DATA1\rmount/system dua1 data1\r;c
+expect "$ " send "initialize dua2: DATA2\rmount/system dua2 data2\r;c
+expect "$ " send "r sys$system:sysgen\r";c
 expect "SYSGEN" send "SET INTSTKPAGES 20\rWRITE CURRENT\rEXIT\rmount/over=id dua3:\r";c
 expect "VAXVMS073 mounted" send "LICENSE REGISTER UCX /ISSUER=VLF /AUTHORIZATION=VLF-HOBBYIST-0000-001278 /PRODUCER=DEC /UNITS=0 /ACTIVITY=CONSTANT=100 /OPTIONS=(MOD_UNITS) /CHECKSUM=2-LPDD-AAFN-MHED-AOJI\rLICENSE LOAD UCX\r";c
 expect "DEC UCX was successfully loaded with" send "LICENSE REGISTER DVNETEND /ISSUER=VLF /AUTHORIZATION=VLF-HOBBYIST-0000-000547 /PRODUCER=DEC /UNITS=0 /ACTIVITY=CONSTANT=100 /OPTIONS=(MOD_UNITS) /CHECKSUM=2-ACHC-HAIC-DCCG-HEGO\rLICENSE LOAD DVNETEND\r";c
