--- a/machines/microvax3900/openvax73/run_microvax3900.ini
+++ b/machines/microvax3900/openvax73/run_microvax3900.ini
@@ -58,8 +58,8 @@ set tq disable
 ;
 ; Attach Ethernet to a network interface
 set xq mac=08-00-2B-AA-BB-CC
-;attach xq eth0
-attach xq nat
+attach xq eth0
+;attach xq nat
 ;
 ; Now start the emulator
 
