--- a/machines/3b2/3b2.ini
+++ b/machines/3b2/3b2.ini
@@ -3,7 +3,7 @@
     set id0 HD161
     attach nvram nvram.bin
     attach tod tod.bin
-    attach id0 hd161.img
+    attach id0 hd161_extras.img
     attach if floppy_disk.img
     attach contty 8888
     boot cpu
