--- a/machines/3b2/3b2.ini
+++ b/machines/3b2/3b2.ini
@@ -1,9 +1,9 @@
     set cpu 4M
     set cpu idle
-    set id0 HD161
+    set idisk0 HD161
     attach nvram nvram.bin
     attach tod tod.bin
-    attach id0 hd161_extras.img
+    attach idisk0 hd161_extras.img
     attach if floppy_disk.img
     attach contty 8888
     boot cpu
