--- a/machines/3b2/3b2.ini
+++ b/machines/3b2/3b2.ini
@@ -3,9 +3,8 @@
     set idisk0 HD161
     attach nvram nvram.bin
     attach tod tod.bin
-    attach idisk0 extras_gnu_src.img
+    attach idisk0 hd161_extras.img
     #attach if floppy_disk.img
     set ctc enabled
     attach contty 8888
     boot cpu
-    
