--- a/machines/3b2/3b2.ini
+++ b/machines/3b2/3b2.ini
@@ -3,6 +3,7 @@
     set idisk0 HD161
     attach nvram nvram.bin
     attach tod tod.bin
+    load -b 3b2_400.bin
     attach idisk0 hd161_extras.img
     #attach if floppy_disk.img
     set ctc enabled
